[package]
name = "str0m-aws-lc-rs"
version = "0.3.0"
authors = ["Martin Algesten <martin@algesten.se>"]
description = "aws-lc-rs backend for str0m WebRTC"
license = "MIT OR Apache-2.0"
repository = "https://github.com/algesten/str0m"
readme = "README.md"
edition = "2024"

# MSRV
rust-version = "1.85.0"

[dependencies]
str0m-proto = { workspace = true, features = ["dtls"] }
aws-lc-rs.workspace = true
dimpl = { workspace = true, features = ["aws-lc-rs", "rcgen"] }
time.workspace = true
