[package]
name = "str0m-openssl"
version = "0.1.3"
authors = ["Martin Algesten <martin@algesten.se>"]
description = "OpenSSL backend for str0m WebRTC"
license = "MIT OR Apache-2.0"
repository = "https://github.com/algesten/str0m"
readme = "README.md"
edition = "2024"

# MSRV
rust-version = "1.85.0"

[features]
default = ["dtls12"]
# Use OpenSSL's native DTLS for DTLS 1.2 (default).
# When disabled, uses dimpl with OpenSSL crypto for DTLS 1.2/1.3/Auto.
dtls12 = ["dep:tracing", "dep:openssl-sys"]
vendored = ["openssl/vendored"]

[dependencies]
str0m-proto = { version = "0.1.2", path = "../../proto", features = ["openssl"] }
openssl = { version = "0.10.70" }
openssl-sys = { version = "0.9.80", optional = true }
dimpl = { version = "0.4.2", default-features = false }
time = "0.3"
tracing = { version = "0.1.37", optional = true }

[dev-dependencies]
arrayvec = "0.7"
