[package]
name = "str0m-openssl"
version = "0.2.0"
authors = ["Martin Algesten <martin@algesten.se>"]
description = "OpenSSL backend for str0m WebRTC"
license = "MIT OR Apache-2.0"
repository = "https://github.com/algesten/str0m"
readme = "README.md"
edition = "2024"

# MSRV
rust-version = "1.85.0"

[features]
vendored = ["openssl/vendored"]
dimpl = ["dep:dimpl"]

[dependencies]
tracing.workspace = true
str0m-proto = { workspace = true, features = ["dtls", "openssl"] }
openssl.workspace = true
openssl-sys.workspace = true
libc.workspace = true
dimpl = { workspace = true, optional = true }

[dev-dependencies]
arrayvec = "0.7"

