[package]
name = "str0m-rust-crypto"
version = "0.1.2"
authors = ["Martin Algesten <martin@algesten.se>"]
description = "Pure Rust crypto backend for str0m WebRTC"
license = "MIT OR Apache-2.0"
repository = "https://github.com/algesten/str0m"
readme = "README.md"
edition = "2021"

# MSRV
rust-version = "1.81.0"

[dependencies]
str0m-proto = { version = "0.1.2", path = "../../proto" }
dimpl = { version = "0.2.4", default-features = false, features = ["rust-crypto", "rcgen"] }

hmac = { version = "0.12.1" }
aes-gcm = { version = "0.10" }
aes = { version = "0.8" }
ctr = { version = "0.9" }
p256 = { version = "0.13", features = ["ecdh"] }
sha1 = { version = "0.10" }
sha2 = { version = "0.10" }
