[package]
name = "str0m-wincrypto"
version = "0.3.2"
description = "Supporting crate for str0m"
license = "MIT OR Apache-2.0"
repository = "https://github.com/algesten/str0m"
readme = "README.md"
edition = "2024"

# MSRV
rust-version = "1.85.0"

[dependencies]
str0m-proto = { version = "0.1.2", path = "../../proto" }
dimpl = { version = "0.4.2", default-features = false }
time = "0.3"

windows = { version = "0.62", features = [
  "Win32_Security_Cryptography",
] }

[dev-dependencies]
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand_core = { version = "0.6", features = ["getrandom"] }
