[package]
name = "str0m-wincrypto"
version = "0.4.0"
description = "Supporting crate for str0m"
license = "MIT OR Apache-2.0"
repository = "https://github.com/algesten/str0m"
readme = "README.md"
edition = "2024"

# MSRV
rust-version = "1.85.0"

[dependencies]
tracing.workspace = true
str0m-proto = { workspace = true, features = ["dtls"] }
windows.workspace = true
